--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -98,24 +98,22 @@ processes underlying TZ maturation are not as well-studied.
 
 Ciliogenesis begins with the assembly of TZ proteins at the tips of
 the basal body.
-This nascent TZ undergoes maturation, where the structure and protein
+This nascent TZ undergoes maturation, during which its structure and protein
 composition changes, allowing for anchoring of the TZ to the membrane and
 establishment of a compartmentalized space bounded by the ciliary membrane
 and the TZ.
 In the Drosophila male germline, nascent TZs first assemble on basal bodies
-during G2 phase in spermatocytes and anchor to the plasma membrane.
-This is followed by establishment of cilium-membrane connections
-through a poorly understood mechanism
-involving microtubule rearrangements \citep{gottardo2013cilium}, and a
+during early G2 phase in spermatocytes and anchor to the plasma membrane.
+This is followed by anchoring of cilia to the plasma membrane,
+rearrangment of microtubules in the axoneme \citep{gottardo2013cilium},
+and establishment of a
 ciliary membrane that persists through meiosis \citep{riparbelli2012assembly}.
 TZ maturation has been described in
 \textit{Paramecium} \citep{aubusson2015transition}
 \textit{Caenorrhabditis elegans} \citep{serwas2017centrioles} and
 \textit{Drosophila melanogaster} \citep{gottardo2013cilium}
-and is most readily observed by an increase in TZ length.
-We expect that this process is analogous to the initial steps of TZ assembly
-through sequential recruitment of TZ proteins and reorganization
-in vertebrates.
+and is most readily observed by an increase in TZ length
+in the Drosophila male germline.
 
 Here, we show that the membrane lipid phosphatidylinositol 4,5-bisphosphate (\PIP{})
 is essential for proper TZ maturation in developing male germ cells
@@ -123,7 +121,7 @@ in \textit{D. melanogaster}.
 \PIP{} is relatively enriched within the plasma membrane and the base of cilia
 in the male germline.
 We show that expression of the bacterial PIP phosphatase SigD
-or by inactivation of the PIP 5-kinase Skittles (Sktl) that localizes to cilia
+or inactivation of the PIP 5-kinase Skittles (Sktl) that localizes to cilia
 induces longer than normal TZs without affecting TZ assembly.
 These hyperelongated TZs show hallmarks of aberrant function similar to those
 found in previously studied TZ mutants,
@@ -145,14 +143,14 @@ which is expressed exclusively in spermatocytes
 \citep{wei2008depletion, fabian2010phosphatidylinositol}.
 We previously showed that \sigd{} induces male sterility
 due in part to defects in flagellar biosynthesis \citep{wei2008depletion}.
-To understand whether this was due to aberrant TZ function,
+To examine whether this may be caused by aberrant TZ function,
 we examined the localization of fluorescently-labelled
 centriolar/basal body protein
 Ana1 (CEP295 homolog) \citep{goshima2007genes, blachon2009proximal}
 and the TZ protein Cep290 \citep{basiri2014migrating}
-during early steps of cilium assembly in spermatocytes in both
+during early steps of cilium assembly in spermatocytes in
 wild-type controls and \sigd{}.
-As shown in Figure 1A,
+As shown in Figure 1,
 while Cep290 on nascent TZs look similar in wild-type and \sigd{}, 
 it grew to significantly longer lengths in \sigd{}
 compared to wild-type controls.
@@ -162,14 +160,14 @@ This hyperelongation phenotype was not specific to Cep290;
 all TZ markers examined showed hyperelongation, including
 acetylated tubulin \citep{gottardo2013cilium},
 Chibby \citep{enjolras2012drosophila} and
-MKS \citep{slaats2015mks1, vieillard2016transition} proteins (Figure 1).
+MKS \citep{slaats2015mks1, vieillard2016transition} proteins (Figure 1D).
 TZ hyperelongation was a highly penetrant phenotype (\textgreater 90\%)
 and showed high intra-cyst correlation (\textgreater 0.95) suggestive
 of a dosage-based response to a shared cellular factor,
 presumably SigD.
 Hyperelongated TZs persisted through meiosis.
 Despite TZ hyperlongation, however, axonemes were able to
-elongate post-meiosis (Figure 1).
+elongate post-meiosis (Figure 1E).
 As we showed previously, the ultrastructure of these axonemes
 was frequently aberrant,
 either lacking symmetry completely or containing triplet microtubules
@@ -185,44 +183,47 @@ physiologically relevant phenotype in response to decreased \PIP{},
 we attempted to rescue it by
 co-expressing fluorescently-tagged full-length Sktl (Sktl) with SigD
 under the same promoter.
-We found that Sktl expression was able to suppress TZ elongation in a cilium-autonomous
-manner (Figure 2A and B).
+We found that Sktl expression was able to suppress TZ elongation
+in a cilium-autonomous manner (Figure 2A and B).
 We also found that \textit{sktl} clones using Flp/FRT-based mitotic recombination
-showed penetrant TZ hyperelongation (Figure 2C).
+showed TZ hyperelongation (Figure 2C).
 
 Since Sktl expression suppressed TZ hyperelongation,
-we investigated whether Sktl could localize to centrioles or cilia in the Drosophila germline.
+we investigated whether Sktl could localize to centrioles or cilia
+in the Drosophila germline.
 Similar to the human PIPKI$\gamma$ isoform \citep{xu2014pipkigamma},
 we found that Sktl localizes to basal bodies in the Drosophila male germline.
 As shown in Figure 2, Drosophila PIPKIs arose from the recent duplication of
-the ancestral PIPKI gene, and are not orthologous to specific vertebrate PIPKI isoforms.
+the ancestral PIPKI gene,
+and are not orthologous to specific vertebrate PIPKI isoforms.
 Sktl has diverged more than its paralog PIP5K59B, and seems
-to be functionally related to PIPKI$\gamma$ in its roles at cilia.
+to be functionally related to PIPKI$\gamma$ in its roles at cilia,
+as well as the \textit{C. elegans} PPK-1 \citep{xu2014pipkigamma}.
 However, unlike the human PIPKI$\gamma$, which functions to license TZ assembly
 by promoting CP110 removal from basal bodies \citep{xu2016phosphatidylinositol},
 our results suggest that Sktl functions in
 regulating TZ length in the Drosophila male germline
 but not its assembly.
 Cp110 is dispensable for cilium formation in Drosophila \citep{franz2013cp110}
-and we found its localization to be unaffected in \sigd{} (supplementary figure 1).
+and we found its localization to be unaffected in \sigd{} (Supplementary figure 1).
 
-\subsection{Hyperelongated transition zones show signs of functional defects}
+\subsection{Hyperelongated transition zones exhibit signs of functional defects}
 While shorter spermatocyte TZs have been reported in mutants of TZ proteins in Drosophila
 \citep{vieillard2016transition, pratt2016drosophila},
-no genetic manipulation has been reported to induce hyperelongated TZs.
+no genetic manipulation has been shown to induce hyperelongated TZs.
 We sought to examine whether TZ hyperelongation due to SigD expression
 affected TZ function.
 During germ cell elongation following meiosis, the TZ detaches from
 the basal body and migrates along the growing axoneme, maintaining a ciliary compartment
-at the distal-most ~5$\mu$m where tubulin is presumably incorporated into the axoneme.
+at the distal-most {\raise.17ex\hbox{$\scriptstyle\sim$}}5$\mu$m where tubulin
+is presumably incorporated into the axoneme.
 We found that
 TZs that assembled in \sigd{} cells are non-migratory despite the growth of the
 axoneme and the cell membrane, as shown by Unc and Cep290 localization.
 We previously described ``comet-shaped'' localization of Unc-GFP in these cells,
 and we find that these hyperelongated Unc signals persist into cellular elongation
-despite elongation of the axoneme.
+despite elongation of the axoneme (Figure 3).
 
-%% reword this, paragraph is garbage
 We previously described the presence of occasional triplet microtubules
 in electron micrographs of axonemes from \sigd{} \citep{wei2008depletion}.
 While centrioles and basal bodies contain microtubule triplets,
@@ -235,29 +236,28 @@ contained puncta of Ana1, a core centriolar protein, at the tips
 of TZs marked with Cep290.
 This TZ-distal Ana1 localization is observed at a relatively low penetrance
 and high intra-cyst correlation.
-We found that treatment of germ cells with Paclitaxel as in \citep{riparbelli2013unique}
+We found that treatment of germ cells with Taxol as in \citep{riparbelli2013unique}
 could increase the penetrance of this phenotype.
-Paclitaxel treatment stabilizes microtubules and is thought to disrupt TZ maturation
-by interrupting microtubule rearrangements, and similarly induces much longer cilia.
-Paclitaxel treatment alone did not induce this phenotype in wild-type controls in our hands
+Taxol treatment stabilizes microtubules and is thought to disrupt TZ maturation
+by interrupting microtubule rearrangements, and similarly induces much longer cilia
+\citep{riparbelli2012assembly}.
+Taxol treatment alone did not induce this phenotype in wild-type controls in our hands
 at varying concentrations ($p$ <0.01 with 5\% penetrance),
 suggesting that loss of \PIP{} acts upstream of or prior to microtubule rearrangement.
 Triplet microtubules within the axoneme are also observed in Taxol-treated cells \citep{riparbelli2013unique}.
 It is possible that the TZ defect allows C-tubules and some centriolar proteins
-to migrate with it to the distal end.
-We did not observe this behaviour with Asterless,
-a migratory protein that localizes to the outer
-ring of centrioles ($p$ <0.01).
+to migrate to the distal end.
+We did not observe this behaviour with Asterless (CEP152)
+\citep{dzhindzhev2010asterless, blachon2008drosophila},
+another centriolar protein ($p$ <0.01), suggesting that these TZ-distal
+sites are not fully centriolar in protein composition.
 
 \subsection{The \textit{onion rings} mutant decouples defects found in cells with reduced levels of \PIP{}}
-A heterozygous mutation in the human \textit{EXOC8},
-the human ortholog of yeast Exo84, is linked to
-Joubert syndrome \citep{dixon2012exome}.
-Exo84 is a component of the octameric exocyst complex, which binds
-\PIP{} and regulates membrane trafficking at the plasma membrane.
 We previously showed that male flies homozygous for the \textit{onion rings}
 (\textit{onr}) mutant of Drosophila Exo84 were sterile, with phenotypes
 similar to \sigd{} \citep{wei2008depletion}.
+Exo84 is a component of the octameric exocyst complex, which binds
+\PIP{} and regulates membrane trafficking at the plasma membrane.
 To investigate whether defects in TZ hyperelongation could be explained by
 defective Exo84 function, we examined TZs in \textit{onr} mutants.
 We found that the \textit{onr} mutant did not display hyperelongated TZs (Figure 5),
@@ -272,9 +272,10 @@ to the plasma membrane, they were unable to either establish or maintain
 membrane connections, and were rendered cytoplasmic (Figure 5) similar to
 \textit{dila; cby} mutants.
 Although we were not able to determine the localization of Exo84 due to the
-lack of available antibodies,
-we found that Sec6 and Exo70 localized to the plasma membrane as expected,
-but were not enriched at the cilium (Figure 5C).
+lack of available reagents,
+we found that Exo70 localized to centrioles (Figure 4D),
+but not Sec6 (Supplementary figure 2).
+Exo70 can directly bind to \PIP{} \citep{he2007exo70}.
 Our results suggest that the exocyst may act downstream of \PIP{} to
 enhance cilium-membrane associations, and that TZ hyperelongation and loss of
 membrane-cilium association are genetically separable phenotypes.
@@ -303,15 +304,14 @@ leading to hyperelongated TZs that show signs of functional defects, and
 may represent one such modifier for TZ function.
 
 In the Drosophila male germline, TZ maturation follows the initial
-assembly of TZ proteins on the nascent basal body in the cytoplasm
+assembly of a nascent TZ on the basal body in the cytoplasm
 followed by anchoring at the plasma membrane.
 TZ maturation involves microtubule rearrangements and TZ elongation,
-which leads to cilium-membrane attachment.
-Loss of \PIP{}, a membrane lipid largely at the plasma membrane,
-disrupts this process.
+which leads to cilium-plasma membrane attachment.
+We found that loss of \PIP{}, a membrane lipid enriched at the plasma membrane,
+affects this process of TZ maturation.
 It causes excessive lengthening of the TZ,
 and disrupts membrane-cilium connections.
-Thus, intermediate steps during TZ maturation require \PIP{}.
 
 We found that the type I phosphatidylinositol 4-phosphate kinase (PIPKI) Skittles
 suppresses TZ elongation in \sigd{} cells in a cilium-autonomous
