--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -248,8 +248,8 @@ Triplet microtubules within the axoneme are also observed in Taxol-treated cells
 It is possible that the TZ defect allows C-tubules and some centriolar proteins
 to migrate to the distal end.
 We did not observe this behaviour with Asterless (CEP152)
-\citep{dzhindzhev2010asterless, blachon2008drosophila},
-another centriolar protein ($p$ <0.01), suggesting that these TZ-distal
+\citep{dzhindzhev2010asterless, blachon2008drosophila} ($p$ <0.01),
+another centriolar protein, suggesting that these TZ-distal
 sites are not fully centriolar in protein composition.
 
 \subsection{The \textit{onion rings} mutant decouples defects found in cells with reduced levels of \PIP{}}
@@ -326,7 +326,7 @@ type 3 (LCCS3).
 It has previously been suggested that LCCS3 might represent a ciliopathy.
 PIPKI$\gamma$ is linked to LCCS3 with features reminiscent
 of ciliopathies such as micrognathia, and a role for the LCCS1 protein
-Gle3 in cilia.
+Gle1 in cilia \citep{}.
 In addition, all three human PIPKI isoforms are highly expressed in testes
 and PIPKI$\alpha$ and PIPKI$\beta$ are important for fertility in mice
 \citep{hasegawa2012phosphatidylinositol}.
@@ -473,7 +473,7 @@ This work was supported by a grant from the Canadian Institute for Health Resear
 \begin{enumerate}[label={(\Alph*)}, nolistsep]
 \item \sigd{} expression induces Cep290 hyperelongation in mature cilia.
   Stages correspond to descriptions in \citep{cenci1994chromatin}.
-\item Paired Ana1-Cep290 lengths in nascent and mature cilia ($n$ \textgreater 30).
+\item Paired Ana1-Cep290 lengths in nascent and mature cilia.
 \item \sigd{} expression induces hyperelongation of other TZ markers, such as Cby, Mks
   and acetylated tubulin.
 \item TZ hyperelongation persists through meiosis but does not affect
