--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -6,7 +6,7 @@
 \usepackage{authblk}
 \usepackage{charter}
 \usepackage[numbers]{natbib}
-\usepackage[draft]{graphicx}  %% remove [draft] to compile with pictures
+\usepackage{graphicx}
 \graphicspath{{../figures/}}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -282,12 +282,10 @@ membrane-cilium association are genetically separable phenotypes.
 
 
 \section{Discussion}
-Cilia are essential for proper human development, and their disruption
-can cause genetic disorders with severities ranging from congenital-
-lethal \citep{}
-to late onset \citep{}.
-A large number of ciliopathies are associated with genes that encode for
-proteins that function at the cilium transition zone (TZ).
+Cilia are tiny organelles that are essential for proper human development
+and cilium-associated developmental disorders are known as ciliopathies.
+A large number of ciliopathies are linked to genes that encode
+transition zone (TZ) proteins.
 Often, a single gene is linked to multiple ciliopathies with
 a spectrum of phenotypes and severities.
 For example, \textit{CEP290} is linked to at least six different
@@ -485,58 +483,63 @@ This work was supported by a grant from the Canadian Institute for Health Resear
 \end{figure}
 \newpage
 
-
 %%
-%    FIGURE 2
-%
-\textbf{Figure 2. Sktl is important for transition zone maturation and localizes to basal bodies.}
-\begin{enumerate}[label={(\Alph*)}, nolistsep]
-\item Expression of full-length Sktl suppresses \sigd{}-induced TZ hyperelongation.
-\item Quantification of Cep290 and Ana1 lengths from control, \sigd{} and Sktl; \sigd{} ($n$\textgreater 60) from (A).
-\item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation. Cilia are marked using
-  Unc-GFP.
-\item Phylogenetic tree of PIP5Ks showing conservation of cilium-associated functions.
-  The scale bar represents expected amino acid substitutions per site and branch support values are shown in red (a value of 1 indicates maximum support).
-Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongylocentrotus purpuratus}), Amel (\textit{Apis mellifera}), Aaeg (\textit{Aedes aegypti}), Dana (\textit{Drosophila ananassae}), Dmel (\textit{Drosophila melanogaster}), Hsap (\textit{Homo sapiens}), Mmus (\textit{Mus musculus}), Xtro (\textit{Xenopus tropicalis}), Cint (\textit{Ciona intestinalis}), Scer (\textit{Saccharomyces cerevisiae}).
-\end{enumerate}
-
-\begin{figure}[ht]
-  \includegraphics[scale=0.9]{figure-2/figure2.png}
-\end{figure}
-\newpage
-
-
-%%
-%    FIGURE 3
-%
-\textbf{Figure 3. Hyperelongated transition zones display functional defects.}
-\begin{enumerate}[label={(\Alph*)}, nolistsep]
-\item
-\item
-\item
-\item
-\end{enumerate}
-
-\begin{figure}[ht]
-  \includegraphics[scale=0.8]{figure-3/figure3.png}
-\end{figure}
-\newpage
-
-
+%%%%
+%%%    FIGURE 2
 %%%
-%%    FIGURE 4
+%%\textbf{Figure 2. Sktl is important for transition zone maturation and localizes to basal bodies.}
+%%\begin{enumerate}[label={(\Alph*)}, nolistsep]
+%%\item Expression of full-length Sktl suppresses \sigd{}-induced TZ hyperelongation.
+%%\item Quantification of Cep290 and Ana1 lengths from control, \sigd{} and Sktl; \sigd{} ($n$\textgreater 60) from (A).
+%%\item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation. Cilia are marked using
+%%  Unc-GFP.
+%%\item Phylogenetic tree of PIP5Ks showing conservation of cilium-associated functions.
+%%  The scale bar represents expected amino acid substitutions per site and branch support values are shown in red (a value of 1 indicates maximum support).
+%%Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongylocentrotus purpuratus}), Amel (\textit{Apis mellifera}), Aaeg (\textit{Aedes aegypti}), Dana (\textit{Drosophila ananassae}), Dmel (\textit{Drosophila melanogaster}), Hsap (\textit{Homo sapiens}), Mmus (\textit{Mus musculus}), Xtro (\textit{Xenopus tropicalis}), Cint (\textit{Ciona intestinalis}), Scer (\textit{Saccharomyces cerevisiae}).
+%%\end{enumerate}
 %%
-\textbf{Figure 4. The \textit{onion rings} (\textit{onr}) allele of \textit{d}Exo84 decouples TZ hyperlongation from loss of plasma membrane contacts.}
-\begin{enumerate}[label={(\Alph*)}, nolistsep]
-\item Cells mutant for \textit{onr} do not display hyperelongated TZs marked with acetylated tubulin.
-\item Quantification from (A).
-\item Cells mutant for \textit{onr} display loss of plasma membrane tethering.
-\end{enumerate}
-
-\begin{figure}[ht]
-  \includegraphics[scale=0.9]{figure-4/figure4.png}
-\end{figure}
-\newpage
-
-
+%%\begin{figure}[ht]
+%%  \includegraphics[scale=0.9]{figure-2/figure2.png}
+%%\end{figure}
+%%\newpage
+%%
+%%
+%%%%
+%%%    FIGURE 3
+%%%
+%%\textbf{Figure 3. Hyperelongated transition zones display functional defects.}
+%%\begin{enumerate}[label={(\Alph*)}, nolistsep]
+%%\item
+%%\item
+%%\item
+%%\item
+%%\end{enumerate}
+%%
+%%\begin{figure}[ht]
+%%  \includegraphics[scale=0.8]{figure-3/figure3.png}
+%%\end{figure}
+%%\newpage
+%%
+%%
+%%%%%
+%%%%    FIGURE 4
+%%%%
+%%\textbf{Figure 4. The \textit{onion rings} (\textit{onr}) allele of \textit{d}Exo84 decouples TZ hyperlongation from loss of plasma membrane contacts.}
+%%\begin{enumerate}[label={(\Alph*)}, nolistsep]
+%%\item Cells mutant for \textit{onr} do not display hyperelongated TZs marked with acetylated tubulin.
+%%\item Quantification from (A).
+%%\item Cells mutant for \textit{onr} display loss of plasma membrane tethering.
+%%\end{enumerate}
+%%
+%%\begin{figure}[ht]
+%%  \includegraphics[scale=0.9]{figure-4/figure4.png}
+%%\end{figure}
+%%\newpage
+%%
+%%
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
